// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CarbonMonoxide Reducer Tests State Changes should load city on success of loading 1`] = `
Object {
  "accuracy": 2,
  "carbonMonoxide": Object {},
  "dateTime": "2019-07-12",
  "error": undefined,
  "isLoading": false,
}
`;

exports[`CarbonMonoxide Reducer Tests State Changes should save error on error of loading 1`] = `
Object {
  "accuracy": 2,
  "carbonMonoxide": undefined,
  "dateTime": "2019-07-12",
  "error": "Error",
  "isLoading": false,
}
`;

exports[`CarbonMonoxide Reducer Tests State Changes should set accuracy on setAccuracy 1`] = `
Object {
  "accuracy": 7,
  "carbonMonoxide": undefined,
  "dateTime": "2019-07-12",
  "error": "Test Error",
  "isLoading": false,
}
`;

exports[`CarbonMonoxide Reducer Tests State Changes should set dateTime on setDateTime 1`] = `
Object {
  "accuracy": 2,
  "carbonMonoxide": undefined,
  "dateTime": "DateTime",
  "error": "Test Error",
  "isLoading": false,
}
`;

exports[`CarbonMonoxide Reducer Tests State Changes should set loading to true on loadCitySuccessAction 1`] = `
Object {
  "accuracy": 2,
  "carbonMonoxide": undefined,
  "dateTime": "2019-07-12",
  "error": "Test Error",
  "isLoading": true,
}
`;
